Feature test on fill_out form, passed

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,15 +1,73 @@
-<!DOCTYPE html>
-<html>
+
+<html class="lt-ie10" lang="en">
+
+<html class="no-js" lang="en">
 <head>
-  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Livsmedel</title>
+
+  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/foundation.css">
-
-  <!-- This is how you would link your custom stylesheet -->
-  <link rel="stylesheet" href="/css/custom.css">
-
-  <script src="/js/vendor/modernizr.js"></script>
+  <link rel="stylesheet" href="/css/app.css">
+  <script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
-<%= yield %>
-</body>
-</html>
+<div class="row">
+  <div class="small-1 small-centered columns"></div>
+  <div class="small-10 small-centered columns">
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <h1><a href="/">Brödjämförelsegrejor !</a></h1>
+        </li>
+        <li class="has-form">
+          <div class="row collapse">
+          </div>
+        </li>
+
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+      </ul>
+      <section class="top-bar-section">
+
+        <ul class="right">
+          <li><a href="/fill_out"></a>Fyll i</li>
+          </li>
+        </ul>
+
+        <ul class="left">
+        </ul>
+      </section>
+    </nav>
+
+    <% if flash %>
+        <% flash.each do |name, msg| %>
+            <div id="flash-container" data-alert class="alert-box <%= name.to_s == 'notice' ? 'success' : 'alert' %>">
+              <%= msg %>
+              <a href="#" class="close">&times;</a>
+            </div>
+        <% end %>
+    <% end %>
+
+    <br>
+    <%= yield %>
+    <br>
+
+
+  </div>
+  <div class="small-1 small-centered columns"></div>
+</div>
+<div class="row">
+  <div class="small-1 small-centered columns"></div>
+  <div class="small-10 small-centered columns">
+    <footer class="footer">
+      <div class="row">
+        <div class="small-12 columns">
+          <p class="slogan">Bättre bröddatabas ej tänkas kan </p>
+          <p class="links">
+            <a href="/">Home</a>
+
+
+
+
+
