add functionality to add product from web admin

--- a/views/admin/fill_out.erb
+++ b/views/admin/fill_out.erb
@@ -8,9 +8,8 @@
         <input type="text" name="category" placeholder="Category"><br>
         <input type="text" name="barcode" placeholder="Barcode"><br>
         <input type="text" name="sugar_content_gram" placeholder="Sugar content in grams"><br>
-        <input type="text" name="ranking" placeholder="Ranking"><br>
-        <button class="button round button success button expand" type="submit" formmethod="get"
-                formaction="https://goo.gl/MMm2ps">Se litet sexiga brödbilder !</button>
+        <button class="button round button success button expand" type="submit" formmethod="post"
+                formaction="/admin/fill_out">Create product</button>
       </form>
     </div>
   </div>
