--- a/views/admin/product_listing.erb
+++ b/views/admin/product_listing.erb
@@ -12,22 +12,37 @@
               </div>
             </div>
         <% else %>
-            <% @product.reverse_each do |product| %>
-                <div class="row">
-                  <div class="large-8 columns">
-                    <div class="callout panel">
-                      <p><%= product[:brand] %></p>
-                      <p><%= product[:product_name] %></p>
-                      <p>
-                        <a class="small button" href="/delete/<%= product[:id] %>">Delete</a>
-                        <a class="small button" href="/update_product/<%= product[:id] %>">Update</a>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-            <% end %>
+            <div class="row">
+              <div class="large-12 columns">
+                <table style="width:100%">
+                  <tr>
+                    <th>Brand</th>
+                    <th>Product Name</th>
+                    <th>Category</th>
+                    <th>Barcode</th>
+                    <th>Sugar/100 g</th>
+                    <th>Ranking</th>
+                    <th>Delete</th>
+                    <th>Update</th>
+                  </tr>
+                  <% @product.reverse_each do |product| %>
+                      <tr>
+                        <td><p><%= product[:brand] %></p></td>
+                        <td><p><%= product[:product_name] %></p></td>
+                        <td><p><%= product[:category] %></p></td>
+                        <td><p><%= product[:barcode] %></p></td>
+                        <td><p><%= product[:sugar_content_gram] %></p></td>
+                        <td><p><%= product[:ranking] %></p></td>
+                        <td><a class="small button" href="/delete/<%= product[:id] %>">Delete</a></td>
+                        <td><a class="small button" href="/update_product/<%= product[:id] %>">Update</a></td>
+                      </tr>
+                      </table>
+                      </div>
+                      </div>
+                  <% end %>
         <% end %>
       </div>
     </div>
   </div>
+
 </main>
