--- a/views/admin/product_listing.erb
+++ b/views/admin/product_listing.erb
@@ -17,10 +17,10 @@
                 <table style="width:100%">
                   <tr>
                     <th>Brand</th>
-                    <th>Product Name</th>
+                    <th>Product name</th>
                     <th>Category</th>
                     <th>Barcode</th>
-                    <th>Sugar/100 g</th>
+                    <th>Sugar/100g</th>
                     <th>Ranking</th>
                     <th>Delete</th>
                     <th>Update</th>
@@ -33,8 +33,8 @@
                         <td><p><%= product[:barcode] %></p></td>
                         <td><p><%= product[:sugar_content_gram] %></p></td>
                         <td><p><%= product[:ranking] %></p></td>
-                        <td><a class="small button" href="/delete/<%= product[:id] %>">Delete</a></td>
-                        <td><a class="small button" href="/update_product/<%= product[:id] %>">Update</a></td>
+                        <td><a class="small button" href="/admin/delete/<%= product[:id] %>">Delete</a></td>
+                        <td><a class="small button" href="/admin/update_product/<%= product[:id] %>">Update</a></td>
                       </tr>
                       </table>
                       </div>
