--- a/views/admin/product_listing.erb
+++ b/views/admin/product_listing.erb
@@ -41,6 +41,7 @@
                       </div>
                   <% end %>
         <% end %>
+        <a class="small button" href="/admin/update_ranking">Update ranking</a>
       </div>
     </div>
   </div>
