--- a/views/admin/fill_out.erb
+++ b/views/admin/fill_out.erb
@@ -1,4 +1,4 @@
-<h3>Admin interface for Brödjämförelser !</h3>
+<h3>Add product</h3>
 <div class="row">
   <div class="small-6 small-centered columns">
     <div class="signup-panel">
