add product update function

--- a/views/admin/admin_header.erb
+++ b/views/admin/admin_header.erb
@@ -11,7 +11,7 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="active"><a href="/admin/fill_out">Add Product</a></li>
-      <li class="active"><a href="/admin/product/listing">Product listing</a></li>
+      <li class="active"><a href="/admin/product_listing">Product listing</a></li>
     </ul>
   </section>
 </nav>
