--- a/views/admin/fill_out.erb
+++ b/views/admin/fill_out.erb
@@ -1,18 +1,22 @@
-<h3>Add product</h3>
 <div class="row">
-  <div class="small-6 small-centered columns">
-    <div class="signup-panel">
-      <form action="/fill_out" method="post">
-        <input type="text"  name="brand" placeholder="Brand"><br>
-        <input type="text" name="product_name" placeholder="Product name"><br>
-        <input type="text" name="category" placeholder="Category"><br>
-        <input type="text" name="barcode" placeholder="Barcode"><br>
-        <input type="text" name="sugar_content_gram" placeholder="Sugar content in grams"><br>
-        <button class="button round button success button expand" type="submit" formmethod="post"
-                formaction="/admin/fill_out">Create product</button>
-      </form>
+  <div class="large-12 columns">
+    <div class="panel">
+      <h4>Add product</h4>
+
+      <div class="small-6 small-centered columns">
+        <div class="signup-panel">
+          <form action="/fill_out" method="post">
+            <input type="text" name="brand" placeholder="Brand"><br>
+            <input type="text" name="product_name" placeholder="Product name"><br>
+            <input type="text" name="category" placeholder="Category"><br>
+            <input type="text" name="barcode" placeholder="Barcode"><br>
+            <input type="text" name="sugar_content_gram" placeholder="Sugar content in grams"><br>
+            <button class="button round button success button expand" type="submit" formmethod="post"
+                    formaction="/admin/fill_out">Add product
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
-
