add db field for product image url

--- a/views/admin/update_product.erb
+++ b/views/admin/update_product.erb
@@ -11,6 +11,7 @@
             <input type="text" name="category" value="<%= @product.category.id %>" placeholder="Category"><br>
             <input type="text" name="barcode" value="<%= @product.barcode %>" placeholder="Barcode"><br>
             <input type="text" name="sugar_content_gram" value="<%= @product.sugar_content_gram %>" placeholder="Sugar content in grams"><br>
+            <input type="text" name="image_url" value="<%= @product.image_url %>" placeholder="Image URL"><br>
             <button class="button round button success button expand" type="submit">Update product</button>
           </form>
         </div>
