WIP: work on getting product image to display on product web view

--- a/views/web/product.erb
+++ b/views/web/product.erb
@@ -27,6 +27,8 @@
                 </thead>
                 <tbody>
                 <tr>
+                  <!-- TODO: Get the image to display (TDD/BDD)-->
+                  <!--<td><img src="<%= @product.image_url %>" /></td>-->
                   <td><p><%= @product.brand.name %></p></td>
                   <td><p><%= @product.product_name %></p></td>
                   <td><p><%= @product.category.name %></p></td>
