--- a/views/web/product.erb
+++ b/views/web/product.erb
@@ -14,6 +14,7 @@
         <% else %>
           <div class="row">
             <div class="large-12 columns">
+              <!--TODO: Get rid of table and instead display info in vertical format (image at top and info below)-->
               <table>
                 <thead>
                 <tr>
@@ -27,7 +28,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                  <!-- TODO: Get the image to display (TDD/BDD)-->
+                  <!--TODO: Get the image to display (TDD/BDD)-->
                   <!--<td><img src="<%= @product.image_url %>" /></td>-->
                   <td><p><%= @product.brand.name %></p></td>
                   <td><p><%= @product.product_name %></p></td>
